# LoxLang

./: .gitignore  CMakeLists.txt  README.md  main.cpp
example/: assignment.lox  example.lox  factorial.lox  if_example.lox  test_if.lox  while_example.lox
include/: Driver.h  Lexer.h  Node.h  NodePrinter.h  Parser.h  Token.h  TokenType.h
lib/: CMakeLists.txt  Lexer.cpp  NodePrinter.cpp  Parser.cpp
